fixed horizontal scroll in mobile

--- a/docs/_sass/minima/_layout.scss
+++ b/docs/_sass/minima/_layout.scss
@@ -262,7 +262,7 @@
 }
 /* Styling for the sidebar. */
 //div.wrapper {max-width: 960px;margin-left:5%;width:65%}
-div.wrapper {margin-left:5%;}
+//div.wrapper {margin-left:5%;}
 div.sidebar {display:none; max-width: 320px;position:fixed;left:75%;background-color:aliceblue;}
 //div.sidebar {max-width: 320px;position:fixed;left:75%;background-color:aliceblue;}
 /*div#sidebar_description {background-color: rgb(96, 170, 234);}*/
